--- a/css/style.css
+++ b/css/style.css
@@ -41,5 +41,58 @@ body, html {
   .conteudo{
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: 5%;
   }
+
+  .conteudo {
+    .mainFrase {
+      color: #cf2525;
+      text-decoration-line: underline;
+      text-decoration-colorrgb(177, 143, 143)ed;
+      text-shadow: 1px 2px 2px rgb(0, 0, 0)
+    }
+
+    .separatorOne {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 20px;
+    }
+
+    .separatorDiv {
+      border-radius: 15px;
+      width: 30dvw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 20dvh;
+      flex-direction: column;
+      row-gap: 10px;
+
+
+      button {
+        background-color: #ac2424;
+        font-size: 30px;
+        color: #fff;
+        padding: 5px 25px;
+        border: none;
+        border-radius: 5px;
+      }
+  
+      button:hover {
+        background-color: #b85252;
+        transition: .2s;
+      }
+
+      a:hover {
+        color: #675deb;
+      }
+    }
+
+    
+  }
+
+
   
