--- a/view/index.html
+++ b/view/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Júlia Maximino | Nutricionista</title>
+    <title>REBANHÃO CARNAVAL</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <video autoplay muted loop class="video-bg">
-        <source src="asset/img/Design sem nome.mp4" type="video/mp4">
+        <source src="../asset/img/Design sem nome.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
       </video>
         <div class="row conteudo">
             <div class="col">
-                <img class="imgRDC" src="asset/img/RDC.png" alt="RDC2025">
+                <img class="imgRDC" src="../asset/img/RDC.png" alt="RDC2025">
             </div>
-            <div class="col text-center">
-                <h1 class="fontP">Senhor, a quem iremos nós? (Jo 6, 68a)</h1>
-                <p class="fontS">Este site tem um fundo com vídeo MP4.</p>
+            <div class="col text-center separatorOne">
+                <h1 class="fontP mainFrase">Senhor, a quem iremos nós? (Jo 6, 68a)</h1>
+                <div class="separatorDiv">
+                    <button class="fontS"> Realizar Inscrição</button>
+                    <a href="#">Ja Sou Inscrito</a>
+                </div>
             </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
