--- a/view/index.html
+++ b/view/index.html
@@ -12,19 +12,21 @@
     <video autoplay muted loop class="video-bg">
         <source src="../asset/img/Design sem nome.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
-      </video>
-        <div class="row conteudo">
-            <div class="col">
-                <img class="imgRDC" src="../asset/img/RDC.png" alt="RDC2025">
-            </div>
-            <div class="col text-center separatorOne">
-                <h1 class="fontP mainFrase">Senhor, a quem iremos nós? (Jo 6, 68a)</h1>
+    </video>
+    <div class="conteudo">
+        <div>
+            <img class="imgRDC" src="../asset/img/RDC.png" alt="RDC2025">
+        </div>
+        <div class="separatorRight">
+                <h1 class="fontP mainFrase">Senhor, a quem iremos nós?</h1><h5>(Jo 6, 68a)</h5>
+            <div class="separatorOne">
                 <div class="separatorDiv">
-                    <button class="fontS"> Realizar Inscrição</button>
-                    <a href="#">Ja Sou Inscrito</a>
+                    <button class="fontS">Realizar Inscrição</button>
+                    <a href="#">Já Sou Inscrito</a>
                 </div>
             </div>
         </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
