--- a/view/index.html
+++ b/view/index.html
@@ -21,7 +21,7 @@
                 <h1 class="fontP mainFrase">Senhor, a quem iremos nós?</h1><h5>(Jo 6, 68a)</h5>
             <div class="separatorOne">
                 <div class="separatorDiv">
-                    <button class="fontS">Realizar Inscrição</button>
+                    <a href="../view/formIndex.html"><button class="fontS">Realizar Inscrição</button></a>
                     <a href="#">Já Sou Inscrito</a>
                 </div>
             </div>
