--- a/view/formIndex.html
+++ b/view/formIndex.html
@@ -23,7 +23,7 @@
                     <img class="imgRDC" src="../asset/img/RDC.png" alt="RDC2025">
                 </div>
                 <div class="contentRight">
-                    <form>
+                    <form id="formInscricao">
                         <div class="row">
                             <div class="col-md-12 center mb-2">
                                 <label for="txtName">Nome Completo</label>
@@ -101,6 +101,10 @@
                     </form>
                 </div>
             </div>
+            <div class="contButtons">
+                <button type="button" class="btn btn-success" id="buttonConfirm">Enviar</button>
+                <button type="button" class="btn btn-danger" id="clearButton">Limpar</button>
+            </div>
         </div>
     </div>
 
@@ -109,7 +113,9 @@
         $("#txtCPF").mask("000.000.000-00");
         $("#txtCEP").mask("00000-000");
     </script>
+    <script src="../js/scriptForm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
