--- a/view/index.html
+++ b/view/index.html
@@ -20,7 +20,7 @@
             <div class="separatorOne">
                 <div class="separatorDiv">
                     <a href="../view/formIndex.html"><button class="fontS">Realizar Inscrição</button></a>
-                    <a href="#">Já Sou Inscrito</a>
+                    <!-- <a href="#">Já Sou Inscrito</a> -->
                 </div>
             </div>
         </div>
