--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body, html {
 }
 
 .separatorDiv button:hover {
-  background-color: #b85252;
+  background-color: #5452ff;
   transition: 0.2s;
 }
 
